--- a/chainstate/Cargo.toml
+++ b/chainstate/Cargo.toml
@@ -8,29 +8,29 @@ rust-version.workspace = true
 [dependencies]
 chainstate-storage = {path = './storage', features = ["mock"]}
 chainstate-types = {path = './types'}
-tx-verifier = {path = './tx-verifier'}
 common = {path = '../common'}
+consensus = {path = "../consensus"}
 crypto = {path = '../crypto'}
 logging = {path = '../logging'}
-num = "0.4"
 pos_accounting = {path = '../pos_accounting'}
 rpc = {path = '../rpc'}
 serialization = {path = "../serialization"}
 subsystem = {path = '../subsystem'}
-utxo = {path = '../utxo'}
+tx-verifier = {path = './tx-verifier'}
 utils = {path = '../utils'}
-consensus = {path = "../consensus"}
-oneshot = "0.1"
+utxo = {path = '../utxo'}
 
 async-trait.workspace = true
 hex.workspace = true
 itertools.workspace = true
 jsonrpsee = { workspace = true, features = ["macros"] }
-thiserror.workspace = true
-mockall = "0.11"
-serde_json = "1.0"
+mockall.workspace = true
+num.workspace = true
+oneshot.workspace = true
 serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 static_assertions.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
 
 [dev-dependencies]
