--- a/node-gui/Cargo.toml
+++ b/node-gui/Cargo.toml
@@ -15,8 +15,7 @@ node-lib = { path = "../node-lib" }
 subsystem = { path = "../subsystem" }
 utils = { path = "../utils" }
 
-anyhow = "1.0"
-iced = { version = "0.9", features = ["canvas", "debug", "tokio"] }
-iced_aw = { version = "0.5", features = ["cupertino"] }
-
+anyhow.workspace = true
+iced = { workspace = true, features = ["canvas", "debug", "tokio"] }
+iced_aw = { workspace = true, features = ["cupertino"] }
 tokio.workspace = true
