--- a/pos_accounting/Cargo.toml
+++ b/pos_accounting/Cargo.toml
@@ -9,15 +9,15 @@ rust-version.workspace = true
 
 [dependencies]
 accounting = {path = '../accounting'}
+chainstate-types = { path = '../chainstate/types' }
 common = {path = '../common'}
 crypto = {path = '../crypto'}
-chainstate-types = { path = '../chainstate/types' }
 serialization = {path = "../serialization"}
 typename = { path = "../utils/typename" }
 
 thiserror.workspace = true
 parity-scale-codec.workspace = true
-variant_count = "1.1"
+variant_count.workspace = true
 
 [dev-dependencies]
 test-utils = { path = "../test-utils" }
