--- a/serialization/core/Cargo.toml
+++ b/serialization/core/Cargo.toml
@@ -11,6 +11,6 @@ rust-version.workspace = true
 parity-scale-codec = { workspace = true, features = ["derive", "chain-error"] }
 
 [dev-dependencies]
-arraytools = "0.1"
-hex-literal = "0.4"
-rand = "0.8"
+arraytools.workspace = true
+hex-literal.workspace = true
+rand.workspace = true
