--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -12,6 +12,8 @@ serialization = { path = "../serialization" }
 
 atomic-traits.workspace = true
 directories.workspace = true
+enum-iterator.workspace = true
+num-derive.workspace = true
 num-traits.workspace = true
 probabilistic-collections.workspace = true
 qrcodegen.workspace = true
@@ -19,6 +21,7 @@ slave-pool.workspace = true
 thiserror.workspace = true
 parity-scale-codec.workspace = true
 zeroize.workspace = true
+bit_field = "0.10.2"
 
 [dev-dependencies]
 test-utils = { path = "../test-utils" }
