--- a/deny.toml
+++ b/deny.toml
@@ -8,6 +8,7 @@ github = [
 unlicensed = "deny"
 confidence-threshold = 0.92
 allow = [
+    "0BSD",
     "Apache-2.0",
     "BSD-2-Clause",
     "BSD-3-Clause",
