--- a/test-utils/Cargo.toml
+++ b/test-utils/Cargo.toml
@@ -11,6 +11,7 @@ rust-version.workspace = true
 common = {path = '../common'}
 crypto = {path = '../crypto'}
 serialization = { path = '../serialization' }
+utils = { path = '../utils' }
 
 hex.workspace = true
 rand_chacha.workspace = true
