--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -9,6 +9,8 @@ rust-version.workspace = true
 default = []
 
 [dependencies]
+p2p-types = { path = "types" }
+
 chainstate = { path = "../chainstate/" }
 common = { path = "../common/" }
 crypto = { path = "../crypto/" }
